@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.8 2020/12/06 23:40:21 schwarz Exp $
+# $NetBSD: Makefile,v 1.9 2022/04/15 12:43:32 schwarz Exp $
 
-DISTNAME=	libexosip2-5.2.0
+DISTNAME=	libexosip2-5.3.0
 PKGNAME=	${DISTNAME:S/exosip/eXosip/1}
 CATEGORIES=	net devel
 MASTER_SITES=	https://download.savannah.nongnu.org/releases/exosip/
@@ -9,6 +9,8 @@ MAINTAINER=	schwarz@NetBSD.org
 HOMEPAGE=	https://savannah.nongnu.org/projects/exosip
 COMMENT=	The Extended Open SIP library
 LICENSE=	gnu-gpl-v2
+
+DEPENDS+=	libexosip>=${PKGVERSION_NOREV}:../../devel/libosip
 
 GNU_CONFIGURE=	yes
 USE_LIBTOOL=	yes
