@@ -1,6 +1,7 @@
-@comment $NetBSD: PLIST,v 1.3 2020/12/06 23:40:21 schwarz Exp $
+@comment $NetBSD: PLIST,v 1.4 2022/04/15 12:43:32 schwarz Exp $
 bin/sip_monitor
 bin/sip_reg
+bin/sip_storm
 include/eXosip2/eX_call.h
 include/eXosip2/eX_message.h
 include/eXosip2/eX_options.h
